--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dctb-geovanna-reactjs",
   "version": "0.1.0",
   "description": "Just a simple study how to convert a simple HTML page in React Structure.",
+  "homepage": "./",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/diogocezar/dctb-geovanna-reactjs"
@@ -28,6 +29,11 @@
     "start": "concurrently \"npm run watch-css\" \"react-scripts start\"",
     "build": "concurrently \"npm run build-css\" \"react-scripts build\"",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
