--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
   "dependencies": {
     "bootstrap": "^4.1.2",
     "concurrently": "^3.6.0",
+    "jquery": "^3.3.1",
+    "jquery.mousewheel": "^3.1.9",
+    "jquery.nicescroll": "^3.7.6",
     "node-sass-chokidar": "^1.3.0",
+    "owl.carousel": "^2.3.4",
     "react": "^16.4.1",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-owl-carousel": "^2.3.1",
+    "react-scripts": "1.1.4",
+    "scrollreveal": "^3.4.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
